--- a/config.sample.ini
+++ b/config.sample.ini
@@ -60,11 +60,14 @@ image_height = 1024
 ;
 
 ; $tweet_template will be used when Flightaware API is not enabled or no sufficent data has been received.
-tweet_template =#${flight} : ${dist_km} km away @ ${alt_m} m and ${el}° frm hrzn, heading ${heading} @ ${speed_kmph}km/h ${time}.
+; Josh Douch's free ICAO lookup / aircraftdata.py fails with --> KeyError: 'regis'
+; tweet_template =#${flight} ${regis} ${plane} ${oper} ${route}: ${dist_km} km away @ ${alt_m} m and ${el}° from horizon, heading ${heading} @ ${speed_kmph}km/h ${time}.
+tweet_template =#${flight}: ${dist_km} km away @ ${alt_m} m and ${el}° from horizon, heading ${heading} @ ${speed_kmph}km/h ${time}.
 
 ; $fa_tweet_template will replace $tweet_template when enough data is gathered from FA API call (see flightaware section below)
 fa_tweet_template =#${flight} : #${orig_alt} (${orig_city}) to #${dest_alt} (${dest_city}). ${dist_mi} mi away @ ${alt_ft} ft and ${el}° frm hrzn, heading ${heading} @ ${speed_mph}mi/h ${time}.
 
+; Change at least the first hashtag :-)
 default_hashtags =#AboveGRQ #ADSB #dump1090
 
 [receiver]
