Fixes for Josh Douch's free ICAO lookup; longer toots

--- a/config.sample.ini
+++ b/config.sample.ini
@@ -1,7 +1,7 @@
 [abovetustin]
 driver = dump1090
 data_url = http://<host>/tar1090/data/aircraft.json
-map_url = http://<host>/tar1090/
+map_url = http://<host>/tar1090/?enablelabels&centerReceiver
 ; map_parameters = ?iconscale=3S&hidesidebar&enablelabels&extendedLabels=2&nowebgl&centerReceiver&screenshot&zoom=12
 map_parameters = None  ; the above is not having any effect
 request_timeout = 60
@@ -18,8 +18,8 @@ request_timeout = 60
 ; elevation_alarm it will be tracked until it leaves the alarm area.  After
 ; "wait_x_updates" updates it will then make the tweet.  It waits "sleep_time" between
 ; each update.
-distance_alarm = 3
-elevation_alarm = 60
+distance_alarm = 2
+elevation_alarm = 65
 wait_x_updates = 3
 
 sleep_time = 1
@@ -60,9 +60,9 @@ image_height = 1024
 ;
 
 ; $tweet_template will be used when Flightaware API is not enabled or no sufficent data has been received.
-; Josh Douch's free ICAO lookup / aircraftdata.py fails with --> KeyError: 'regis'
-; tweet_template =#${flight} ${regis} ${plane} ${oper} ${route}: ${dist_km} km away @ ${alt_m} m and ${el}° from horizon, heading ${heading} @ ${speed_kmph}km/h ${time}.
-tweet_template =#${flight}: ${dist_km} km away @ ${alt_m} m and ${el}° from horizon, heading ${heading} @ ${speed_kmph}km/h ${time}.
+; Josh Douch's free ICAO lookup
+tweet_template =#${flight} Reg.: ${regis} Type: ${plane} Operator: ${oper} From/to: ${route} - is ${dist_km} km away @ ${alt_m} m and ${el}° from horizon, heading ${heading} @ ${speed_kmph}km/h ${time}.
+; tweet_template =#${flight}: ${dist_km} km away @ ${alt_m} m and ${el}° from horizon, heading ${heading} @ ${speed_kmph}km/h ${time}.
 
 ; $fa_tweet_template will replace $tweet_template when enough data is gathered from FA API call (see flightaware section below)
 fa_tweet_template =#${flight} : #${orig_alt} (${orig_city}) to #${dest_alt} (${dest_city}). ${dist_mi} mi away @ ${alt_ft} ft and ${el}° frm hrzn, heading ${heading} @ ${speed_mph}mi/h ${time}.
