Multiple updates and fixes

--- a/config.sample.ini
+++ b/config.sample.ini
@@ -79,7 +79,8 @@ host = <host URL> ; Example: https://botsin.space
 access_token = ACCESS TOKEN from your Mastodon instance
 
 [flightaware]
-; NOT AVAILABLE ANYMORE !!
+; NOT AVAILABLE ANYMORE !! Replaced by AeroAPI.
+# https://flightaware.com/aeroapi/portal/resources#aeroapi
 ; FlightAware API allows to get more information on the flights. Basic API access is now free
 ; and if you are FA feeder, your request limit is doubled. For more details check:
 ; https://flightaware.com/commercial/flightxml/pricing_class.rvt
