Pre-flight checks and repairs

--- a/config.sample.ini
+++ b/config.sample.ini
@@ -2,8 +2,7 @@
 driver = dump1090
 data_url = http://<host>/tar1090/data/aircraft.json
 map_url = http://<host>/tar1090/?enablelabels&centerReceiver
-; map_parameters = ?iconscale=3S&hidesidebar&enablelabels&extendedLabels=2&nowebgl&centerReceiver&screenshot&zoom=12
-map_parameters = None  ; the above is not having any effect
+; map_parameters = None
 request_timeout = 60
 
 ; Use Virtual Radar Server instead of tar1090 / dump1090:
