Some more pre-flight checks and small repairs

--- a/config.sample.ini
+++ b/config.sample.ini
@@ -78,11 +78,9 @@ host = <host URL> ; Example: https://botsin.space
 access_token = ACCESS TOKEN from your Mastodon instance
 
 [flightaware]
-; NOT AVAILABLE ANYMORE !! Replaced by AeroAPI.
-# https://flightaware.com/aeroapi/portal/resources#aeroapi
-; FlightAware API allows to get more information on the flights. Basic API access is now free
-; and if you are FA feeder, your request limit is doubled. For more details check:
-; https://flightaware.com/commercial/flightxml/pricing_class.rvt
+; FlightAware API provides additional information about flights. The personal tier is free, and
+; if you are a FlightAware feeder, you receive $10 of Per-Query fees free each month. For more
+; details: https://flightaware.com/commercial/aeroapi/#compare-plans-section
 fa_enable = False
 fa_username = XXXXX
 fa_api_key = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
@@ -91,5 +89,5 @@ fa_api_key = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 do_crop = False
 crop_x = 0
 crop_y = 0
-crop_width = 816
-crop_height = 720
+crop_width = 880
+crop_height = 990
