--- a/config.sample.ini
+++ b/config.sample.ini
@@ -60,7 +60,7 @@ image_height = 1024
 
 ; $tweet_template will be used when Flightaware API is not enabled or no sufficent data has been received.
 ; Josh Douch's free ICAO lookup
-tweet_template =#${flight} Reg.: ${regis} Type: ${plane} Operator: ${oper} From/to: ${route} - is ${dist_km} km away @ ${alt_m} m and ${el}° from horizon, heading ${heading} @ ${speed_kmph}km/h ${time}.
+tweet_template =#${flight} Reg.: ${regis} Type: ${plane} Operator: ${oper} Route: ${route} - is ${dist_km} km away @ ${alt_m} m and ${el}° from horizon, heading ${heading} @ ${speed_kmph}km/h ${time}.
 ; tweet_template =#${flight}: ${dist_km} km away @ ${alt_m} m and ${el}° from horizon, heading ${heading} @ ${speed_kmph}km/h ${time}.
 
 ; $fa_tweet_template will replace $tweet_template when enough data is gathered from FA API call (see flightaware section below)
