--- a/.gitignore
+++ b/.gitignore
@@ -2,20 +2,20 @@
 logs/
 keys/
 
-#ignore the file config.ini:
+# ignore the file config.ini:
 config.ini
 
-#ignore nohup.out
+# ignore nohup.out
 nohup.out
 
-
-#ignore toot.png the image it saves on each tweet:
+# ignore png images:
 toot.png
+timeout.png
 
-#ignore the ghostscript log:
+# ignore the ghostscript log:
 *.log
 
-#ignore my enviromental variables:
+# ignore my enviromental variables:
 __pycache__/
 bin/
 include
@@ -23,6 +23,6 @@ lib
 pyvenv.cfg
 share
 
-#ignore other things that happen to be there:
+# ignore other things that happen to be there:
 .DS_Store
 ._.DS_Store
