✈️  - no more hard coded values

--- a/config.sample.ini
+++ b/config.sample.ini
@@ -92,3 +92,9 @@ crop_x = 0
 crop_y = 0
 crop_width = 880
 crop_height = 990
+
+[apps]
+; Change the paths where the Chromedriver and the Chrome based browser
+; are installed on the local system.
+driver_path = /usr/local/bin/chromedriver
+browser_path = /Applications/Brave Browser.app/Contents/MacOS/Brave Browser
