Replace posting to Mastodon with Bluesky posts

--- a/config.sample.ini
+++ b/config.sample.ini
@@ -1,9 +1,12 @@
 [abovetustin]
 driver = dump1090
-data_url = http://<host>/tar1090/data/aircraft.json
-map_url = http://<host>/tar1090/?enablelabels&centerReceiver
+data_url = http://<hostname>/tar1090/data/aircraft.json
+map_url = http://<hostname>/tar1090/
 ; map_parameters = None
 request_timeout = 60
+
+map_params_screenshot = &iconscale=1S&hideButtons&enablelabels
+; &centerReceiver&hidesidebar&screenshot&noIsolation
 
 ; Use Virtual Radar Server instead of tar1090 / dump1090:
 ; driver = virtualradarserver
@@ -18,7 +21,7 @@ request_timeout = 60
 ; "wait_x_updates" updates it will then make the tweet.  It waits "sleep_time" between
 ; each update.
 distance_alarm = 2
-elevation_alarm = 65
+elevation_alarm = 75
 wait_x_updates = 3
 
 sleep_time = 1
@@ -60,7 +63,7 @@ image_height = 1024
 
 ; $tweet_template will be used when Flightaware API is not enabled or no sufficent data has been received.
 ; Use HexDB.io / Josh Douch's free ICAO lookup for additional information:
-tweet_template =#${flight} Reg.: ${regis} Type: ${plane} Operator: ${oper} Route: ${route} - is ${dist_km} km away @ ${alt_m} m and ${el}° from horizon, heading ${heading} @ ${speed_kmph}km/h ${time}.
+tweet_template =${flight} Reg.: ${regis} Type: ${plane} Operator: ${oper} Route: ${route} - is ${dist_km} km away @ ${alt_m} m and ${el}° from horizon, heading ${heading} @ ${speed_kmph}km/h ${time}.
 ; Simple, no additional information:
 ; tweet_template =#${flight}: ${dist_km} km away @ ${alt_m} m and ${el}° from horizon, heading ${heading} @ ${speed_kmph}km/h ${time}.
 
@@ -68,15 +71,21 @@ tweet_template =#${flight} Reg.: ${regis} Type: ${plane} Operator: ${oper} Route
 fa_tweet_template =#${flight} : #${orig_alt} (${orig_city}) to #${dest_alt} (${dest_city}). ${dist_mi} mi away @ ${alt_ft} ft and ${el}° frm hrzn, heading ${heading} @ ${speed_mph}mi/h ${time}.
 
 ; Change at least the first hashtag :-)
-default_hashtags =#AboveGRQ #ADSB #dump1090
+default_hashtags =
+;#AboveGRQ #ADSB #dump1090
 
 [receiver]
-latitude = XX.XXXXX
-longitude = X.XXXXX
+latitude = xx.xxxxx
+longitude = y.yyyyyy
 
-[mastodon]
-host = <host URL> ; Example: https://botsin.space
-access_token = ACCESS TOKEN from your Mastodon instance
+[mastodon] ; now obsolete
+mstd_enable = False
+host = https://botsin.space
+access_token = ACCESS TOKEN
+
+[bsky]
+handle = my-handle.bsky.social
+password = verySecret
 
 [flightaware]
 ; FlightAware API provides additional information about flights. The personal tier is free, and
@@ -87,14 +96,14 @@ fa_username = XXXXX
 fa_api_key = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 
 [crop]
-do_crop = False
+do_crop = True
 crop_x = 0
 crop_y = 0
-crop_width = 880
-crop_height = 990
+crop_width = 780
+crop_height = 800
 
 [apps]
-; Change the paths where the Chromedriver and the Chrome based browser
+; Change the paths where the geckodriver and the Firefox browser
 ; are installed on the local system.
-driver_path = /usr/local/bin/chromedriver
-browser_path = /Applications/Brave Browser.app/Contents/MacOS/Brave Browser
+driver_path = /opt/homebrew/bin/geckodriver
+browser_path = /Applications/Firefox.app/Contents/MacOS/firefox
