--- a/config.sample.ini
+++ b/config.sample.ini
@@ -23,8 +23,10 @@ map_params_screenshot = &iconscale=1S&hideButtons&enablelabels
 distance_alarm = 2
 elevation_alarm = 75
 wait_x_updates = 3
-
 sleep_time = 1
+
+; Browser related settings:
+wait_time = 2
 image_width = 1280
 image_height = 1024
 
