--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -1,18 +1,17 @@
-name: ruff check
+---
+name: Ruff
+
 on: [push, pull_request]
+
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Install Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install ruff
-      # Update output format to enable automatic inline annotations.
-      - name: Run Ruff
-        run: ruff check --output-format=github .
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Install the latest version of ruff
+        uses: astral-sh/ruff-action@v3
+      - name: Ruff check
+        run: ruff check --fix
+      - name: Ruff format
+        run: ruff format
