--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,13 @@
-# Added specificly for AboveTustin.  Have to hide the logs and keys folders
-logs/
-keys/
-
-# ignore the file config.ini:
 config.ini
-
-# ignore nohup.out
 nohup.out
 
-# ignore png images:
 *.png
-
-# ignore the ghostscript log:
 *.log
 
-# ignore my enviromental variables:
-__pycache__/
-bin/
+__pycache__
+bin
 include
 lib
-pyvenv.cfg
 share
+pyvenv.cfg
 .ruff_cache
-
-# ignore other things that happen to be there:
-.DS_Store
-._.DS_Store
