chore: code improvements

--- a/config.sample.ini
+++ b/config.sample.ini
@@ -1,4 +1,4 @@
-[abovetustin]
+[aboveme]
 driver = dump1090
 data_url = http://<hostname>/tar1090/data/aircraft.json
 map_url = http://<hostname>/tar1090/
