--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,14 @@
+[project]
+name = "AboveGRQ"
+version = "0.1.13"
+requires-python = ">=3.13"
+dependencies = [
+    "atproto>=0.0.65",
+    "pillow>=12.1.0",
+    "requests>=2.32.5",
+    "selenium==4.9.1",
+    "webdriver-manager>=4.0.2",
+]
+
 [tool.ruff]
-target-version = "py312"
+target-version = "py314"
