--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,9 @@ dependencies = [
 
 [tool.ruff]
 target-version = "py314"
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+    "pytest-mock>=3.15.1",
+]
