chore: update config.sample.ini

--- a/config.sample.ini
+++ b/config.sample.ini
@@ -72,8 +72,8 @@ tweet_template =${flight} Reg.: ${regis} Type: ${plane} Operator: ${oper} Route:
 ; $fa_tweet_template will replace $tweet_template when enough data is gathered from FA API call (see flightaware section below)
 fa_tweet_template =#${flight} : #${orig_alt} (${orig_city}) to #${dest_alt} (${dest_city}). ${dist_mi} mi away @ ${alt_ft} ft and ${el}° frm hrzn, heading ${heading} @ ${speed_mph}mi/h ${time}.
 
-; Change at least the first hashtag - Does not work, NEEDS FIX!
-; default_hashtags = #AboveGRQ #ADSB #dump1090
+; Change at least the first hashtag!
+default_hashtags = #AboveGRQ #ADSB #dump1090
 
 [receiver]
 latitude = xx.xxxxx
