--- a/config.example.ini
+++ b/config.example.ini
@@ -79,14 +79,9 @@ default_hashtags = #AboveGRQ #ADSB #dump1090
 latitude = xx.xxxxx
 longitude = y.yyyyyy
 
-[mastodon] ; now obsolete
-mstd_enable = False
-host = https://botsin.space
-access_token = ACCESS TOKEN
-
-[bsky]
-handle = my-handle.bsky.social
-password = verySecret
+; [bsky] For better security, set these in .envrc !!
+; handle = my-handle.bsky.social
+; password = verySecret
 
 [crop]
 do_crop = True
