--- a/tests/test-config.ini
+++ b/tests/test-config.ini
@@ -20,14 +20,9 @@ default_hashtags = #TestHashtag #ADSB
 latitude = 53.215119
 longitude = 6.570963
 
-[mastodon]
-mstd_enable = False
-host = https://botsin.space
-access_token = TEST_ACCESS_TOKEN
-
 [bsky]
-handle = test.bsky.social
-password = testpassword
+BSKY_HANDLE = test.bsky.social
+BSKY_PASSWORD = testpassword
 
 [crop]
 do_crop = True
